# auto-mod-tydry

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs
src/automod/: ai.rs  mod.rs
src/core/: mod.rs  ratelimit.rs
src/database/: mod.rs
src/events/: mod.rs
