[package]
name = "automod-bot"
version = "0.1.0"
edition = "2021"
default-run = "automod-bot"

[dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full", "rt", "rt-multi-thread", "macros"] }

# Discord API (Twilight is incredibly fast and modular, perfect for antinuke)
twilight-model = "0.15"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-validate = "0.15"

# Environment Variables
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Redis for State & Rate Limiting
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# PostgreSQL via Supabase
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"

# Futures (needed for event stream handling)
futures = "0.3"
futures-util = "0.3"
regex = "1.12.3"
lazy_static = "1.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
